--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.42.0",
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "acorn": "^8.8.2",
