--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
   },
   "author": "",
   "license": "ISC",
+  "browsersList": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel": "^6.23.0",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.31.0",
     "eslint": "^8.42.0",
     "json-server": "^0.17.3",
+    "loader": "^2.1.1",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   },
@@ -31,6 +41,7 @@
     "debug": "^4.3.4",
     "deep-is": "^0.1.4",
     "doctrine": "^3.0.0",
+    "es6-promise": "^4.2.8",
     "escape-string-regexp": "^4.0.0",
     "eslint-scope": "^7.2.0",
     "eslint-visitor-keys": "^3.4.1",
@@ -71,6 +82,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
     "natural-compare": "^1.4.0",
+    "nodelist-foreach-polyfill": "^1.2.0",
     "once": "^1.4.0",
     "optionator": "^0.9.1",
     "p-limit": "^3.1.0",
